<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegisterActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <ImageView
        android:id="@+id/bmw_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:src="@drawable/bmw_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/registration"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bmw_logo" />
        <LinearLayout
            android:id="@+id/facebook_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/google_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_tv"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="35dp">
            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:neomorph_view_type="rectangular"
                app:neomorph_shadow_type="outer"
                app:neomorph_elevation="4dp"
                app:neomorph_corner_radius="13dp"
                app:neomorph_background_color="#1D1D1D"
                app:neomorph_shadow_color="#403920"
                app:neomorph_highlight_color="#1D1D1D"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/facebookbtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background2"
                    android:text="@string/facebook"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    />

            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/google_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/facebook_btn"
            app:layout_constraintTop_toBottomOf="@+id/login_tv"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp">
            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:neomorph_view_type="rectangular"
                app:neomorph_shadow_type="outer"
                app:neomorph_elevation="4dp"
                app:neomorph_corner_radius="13dp"
                app:neomorph_background_color="#1D1D1D"
                app:neomorph_shadow_color="#403920"
                app:neomorph_highlight_color="#1D1D1D"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/googlebtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background2"
                    android:text="@string/google"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    />

            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
        </LinearLayout>


        <View
        android:id="@+id/view1"
        android:layout_height="1dp"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/facebook_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/or_tv"
        android:layout_marginTop="20dp"
        android:background="#7B7B7B"/>
    <TextView
        android:id="@+id/or_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/view1"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintStart_toEndOf="@id/view1"
        app:layout_constraintEnd_toStartOf="@id/view2"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="#7B7B7B"
        android:text="@string/or"/>
    <View
        android:id="@+id/view2"
        android:layout_height="1dp"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebook_btn"
        app:layout_constraintStart_toEndOf="@id/or_tv"
        android:layout_marginTop="20dp"
        android:background="#7B7B7B"/>

        <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
            android:id="@+id/email_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:neomorph_view_type="rectangular"
            app:neomorph_shadow_type="outer"
            app:neomorph_elevation="4dp"
            app:neomorph_corner_radius="13dp"
            app:neomorph_background_color="#1D1D1D"
            app:neomorph_shadow_color="#2A2A2A"
            app:neomorph_highlight_color="#1D1D1D"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/facebook_btn"
            app:layout_constraintTop_toBottomOf="@+id/or_tv"
            app:layout_constraintEnd_toEndOf="@id/google_btn">
            <EditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/email"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="#7B7B7B"
                android:background="@drawable/background3"
                android:drawablePadding="12dp"
                />
        </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

        <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
            android:id="@+id/password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:neomorph_view_type="rectangular"
            app:neomorph_shadow_type="outer"
            app:neomorph_elevation="4dp"
            app:neomorph_corner_radius="13dp"
            app:neomorph_background_color="#1D1D1D"
            app:neomorph_shadow_color="#2A2A2A"
            app:neomorph_highlight_color="#1D1D1D"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/facebook_btn"
            app:layout_constraintTop_toBottomOf="@+id/email_et"
            app:layout_constraintEnd_toEndOf="@id/google_btn">
            <EditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/lock"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="#7B7B7B"
                android:background="@drawable/background3"
                android:drawablePadding="12dp"
                />
        </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>


        <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
            android:id="@+id/confirm_password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:neomorph_view_type="rectangular"
            app:neomorph_shadow_type="outer"
            app:neomorph_elevation="4dp"
            app:neomorph_corner_radius="13dp"
            app:neomorph_background_color="#1D1D1D"
            app:neomorph_shadow_color="#2A2A2A"
            app:neomorph_highlight_color="#1D1D1D"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/facebook_btn"
            app:layout_constraintTop_toBottomOf="@+id/password_et"
            app:layout_constraintEnd_toEndOf="@id/google_btn">
            <EditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/lock"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="#7B7B7B"
                android:background="@drawable/background3"
                android:drawablePadding="12dp"
                />
        </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="@id/google_btn"
            app:layout_constraintEnd_toEndOf="@id/confirm_password_et"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_et">
            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:neomorph_view_type="rectangular"
                app:neomorph_shadow_type="outer"
                app:neomorph_elevation="4dp"
                app:neomorph_corner_radius="13dp"
                app:neomorph_background_color="#1D1D1D"
                app:neomorph_shadow_color="#1D3B45"
                app:neomorph_highlight_color="#1D1D1D"

                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />
            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
        </LinearLayout>


        <TextView
        android:id="@+id/log_in_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#FCCB0F"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <TextView
        android:id="@+id/skip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textStyle="bold"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_in_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>